BE/Aucation/src/main/java/com/example/aucation/common/error/SmsSendFailException.java
package com.example.aucation.common.error;

public class SmsSendFailException extends RuntimeException {

    public SmsSendFailException(ApplicationError error) {
        super(error.getMessage());
    }
}
